# Sudoku

./: Makefile  Makefile.in  README  ToDo  config.h  config.h.in  config.status  configure  configure.ac
cgi-bin/: Makefile  Makefile.am  Makefile.in  sudoku.c  sudoku.c.orig
cgi-bin/.deps/: sudoku.Po
htdocs/: Makefile  Makefile.in  sudoku.html
